# demo-lang

./: .gitignore  pyproject.toml  readme.md
docs/: design.md  examples.ipynb  reference.md
src/demo_lang/: __about__.py  __init__.py  compile.py  magic.py  tests.py
src/demo_lang/assets/: cutting_stock_ast.pkl  frequency_assignment_ast.pkl  job_scheduling_ast.pkl  knapsack_ast.pkl  level_packing_ast.pkl  n_queens_ast.pkl  project_scheduling_ast.pkl  travelling_salesman_ast.pkl
