[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo_lang"
version = "0.0.1"
authors = [
  { name="Nikhil Devadiga", email="nmdevadiga216@gmail.com"},
]
description = ""
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.hatch.version]
path = "src/demo_lang/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
  "/.vscode",
  "/docs",
  "/venv",
  "/main.py",
  "/testing.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demo_lang"]